2006-04-17  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/Makefile.am: remove the french.desktop.in file from the
	build, as the dictionary server is not available anymore.

2006-04-17  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.c: Do not free the OptionContext: it'll be done by
	the GnomeProgram when it's unref'ed.

2006-04-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.c: Use g_option_context_set_main_group() to
	show the application's options using the --help command line
	switch (closes #335730).

2006-04-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.c (gdict_app_finalize): Unref the GnomeProgram
	object to avoid leakage (closes bug #335745).

2006-03-04  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_init): keep the applet's background
	in sync with the panel's own (patch by Michael Hoffman, closes
	bug #332035).

2006-03-03  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_build_window),
	(window_key_press_event_cb): allow using Esc to close the definition
	window of the applet.

	* src/gdict-window.c (set_default_size): ensure that the window is
	realized since we are going to use its GdkWindow.

2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/.cvsignore:
	* data/.cvsignore: update .cvsignore with built files.

2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_create_data_dir),
	(gdict_applet_init): apply the same logic of the application to the
	applet.

2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.c (gdict_app_create_data_dir): remove the big
	frickin' dialog, and just rename the file that's causing the error
	by appending the '.pre-2-14' string to its name.  Let's hope this
	is enough.

2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-window.c (gdict_window_lookup_end_cb): fix ngettext()
	usage.

2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>
